# network-anomaly-detector-DCML

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: server_config.py
src/fault_injector/: communicate_client.py  fault_injector.py  main.py
src/monitoring/: helper.py  main.py  models.py  monitor.py  monitor_server_reciever.py
src/servers/: tcp_server.py  udp_server.py
src/training/: helper.py
