[project]
name = "dcml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=7.1.3",
    "colorama>=0.4.6",
    "pandas>=3.0.0",
    "numpy>=2.4.1",
    "scikit-learn>=1.8.0",
    "deptry>=0.24.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "ipympl>=0.10.0",
]
